# painel

./: .gitignore  LICENSE  MONETIZATION.md  README.md  pyproject.toml
.claude/skills/painel/: SKILL.md
.github/workflows/: test.yml
docs/: CLOUD.md  SPEC.md  STRATEGY.md  aider.md  cursor.md
examples/: board.example.json
painel/: __init__.py  __main__.py  directory.py  hub.py  lint.py  page.py  registry.py  server.py
painel/blocks/: __init__.py  _template.py  approval.py  base.py  chat.py  checklist.py  choice.py  form.py  heading.py  log.py  markdown.py  note.py  plan.py  question.py  resources.py  tasks.py  upload.py
tests/: _golden_normalize.py  regen_golden.py  test_blocks.py  test_golden.py  test_hub.py  test_lint.py  test_main.py  test_pages.py  test_server.py  test_service.py  test_shell.py  test_tab_hygiene.py
tests/golden/: demo.html
