[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "painel"
version = "0.1.0"
description = "pAInel — the second interface for CLI agents. A dependency-free interactive dashboard driven by a JSON board."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Rafael Lopes" }]
requires-python = ">=3.8"
keywords = ["ai", "agent", "claude-code", "dashboard", "cli", "tui", "llm"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Utilities",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/rafaellopes/painel"
Repository = "https://github.com/rafaellopes/painel"

[project.scripts]
painel = "painel.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["painel"]
